Made UI better and clicking on cells works now

--- a/index.html
+++ b/index.html
@@ -16,10 +16,36 @@
   <body>
     <main>
       <div class="container">
-        <div class="header-div">
-          <h1 class="page-heading">Tic Tac Toe</h1>
-        </div>
-        <div class="board"></div>
+        <section class="left">
+          <div class="player-box">
+            <h2 class="player-name">Player 1</h2>
+            <h2 class="turn-message active">Your Turn</h2>
+            <div class="symbol">X</div>
+          </div>
+        </section>
+        <section class="middle">
+          <div class="header-div">
+            <h1 class="page-heading">Tic Tac Toe</h1>
+          </div>
+          <div class="board">
+            <!-- <div class="cell corner"></div>
+            <div class="cell"></div>
+            <div class="cell corner"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell corner"></div>
+            <div class="cell"></div>
+            <div class="cell corner"></div> -->
+          </div>
+        </section>
+        <section class="right">
+          <div class="player-box">
+            <h2 class="player-name">Player 2</h2>
+            <h2 class="turn-message">Please Wait</h2>
+            <div class="symbol">O</div>
+          </div>
+        </section>
       </div>
     </main>
   </body>
