Game stops after someone has won

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="left">
           <div class="player-box">
             <h2 class="player-name">Player 1</h2>
-            <h2 class="turn-message active">Your Turn</h2>
+            <h2 class="turn-message">Press the start button</h2>
             <div class="symbol">X</div>
           </div>
         </section>
@@ -28,6 +28,15 @@
             <h1 class="page-heading">Tic Tac Toe</h1>
           </div>
           <div class="board">
+            <button class="cell corner" data-row="0" data-column="0"></button>
+            <button class="cell" data-row="0" data-column="1"></button>
+            <button class="cell corner" data-row="0" data-column="2"></button>
+            <button class="cell" data-row="1" data-column="0"></button>
+            <button class="cell" data-row="1" data-column="1"></button>
+            <button class="cell" data-row="1" data-column="2"></button>
+            <button class="cell corner" data-row="2" data-column="0"></button>
+            <button class="cell" data-row="2" data-column="1"></button>
+            <button class="cell corner" data-row="2" data-column="2"></button>
             <!-- <div class="cell corner"></div>
             <div class="cell"></div>
             <div class="cell corner"></div>
@@ -38,11 +47,14 @@
             <div class="cell"></div>
             <div class="cell corner"></div> -->
           </div>
+          <div class="button-container">
+            <button class="start-button">Start</button>
+          </div>
         </section>
         <section class="right">
           <div class="player-box">
             <h2 class="player-name">Player 2</h2>
-            <h2 class="turn-message">Please Wait</h2>
+            <h2 class="turn-message">Press the start button</h2>
             <div class="symbol">O</div>
           </div>
         </section>
