Can choose player names

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <h2 class="player-name">Player 1</h2>
             <h2 class="turn-message">Press the start button</h2>
             <div class="symbol">X</div>
+            <input
+              placeholder="Enter your name"
+              type="text"
+              id="player1-name"
+            />
           </div>
         </section>
         <section class="middle">
@@ -47,6 +52,11 @@
             <h2 class="player-name">Player 2</h2>
             <h2 class="turn-message">Press the start button</h2>
             <div class="symbol">O</div>
+            <input
+              placeholder="Enter your name"
+              type="text"
+              id="player2-name"
+            />
           </div>
         </section>
       </div>
